first dirty verions of new-favicon

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,7 +13,7 @@
         #nav
           %ul
             %li
-              %a{:href => "/new"} Post Favicon
+              %a{:href => "/new"} New Favicon
             %li
               %a{:href => "/bookmarklet"} Bookmarklet
       #content
