--- a/views/new.haml
+++ b/views/new.haml
@@ -1,1 +1,5 @@
-new ...
+%form{:action => "/", :method => "post"}
+  %fieldset
+    %label URL
+    %input{:type => "text", :name => "url"}
+    %button Get Favicon!
