--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,17 +3,17 @@
   %head
     %meta{'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
     %link{:rel => 'stylesheet', :href => 'koguma.css', :type => 'text/css'}
-    %title I &hearts; favicons
+    %title I &hearts; Icons
   %body
-    #wrapper
+    #container
       #header
         #logo
           %h1
-            %a{:href => "/"} Favicon Love
+            %a{:href => "/"} Icon Love
         #nav
           %ul
             %li
-              %a{:href => "/new"} New Favicon
+              %a{:href => "/new"} New Icon
             %li
               %a{:href => "/bookmarklet"} Bookmarklet
       #content
