--- a/views/index.haml
+++ b/views/index.haml
@@ -2,3 +2,4 @@
   - @favicons.each do |favicon|
     %li
       %img{:src => "data:image/vnd.microsoft.icon;base64," + favicon.data}
+      %a{:href => favicon.url}= favicon.url
