--- a/views/koguma.sass
+++ b/views/koguma.sass
@@ -65,6 +65,7 @@ ul
 #content
   :margin 3em 0
   :background #E9E9E9
+  :border 1px solid #DDD
   :-moz-border-radius 1em
   :-webkit-border-radius 1em
   ul
@@ -77,10 +78,12 @@ ul
       img
         :display block
         :float left
+        :background #FFF
+        :border 1px solid #DDD
       a
         :display block
         :font-size 1.2em
-        :line-height 1em
+        :line-height 1.2em
         :margin 0 4em 0 2em
         :color #999
         &:hover
