--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,8 @@
   %head
     %meta{'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
     %link{:rel => 'stylesheet', :href => 'koguma.css', :type => 'text/css'}
+    %script{:src => 'js/lib/jquery-1.3.2.min.js', :type => 'text/javascript'}
+    %script{:src => 'js/koguma.js', :type => 'text/javascript'}
     %title I &hearts; Icons
   %body
     #container
