--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,9 +2,9 @@
 %html
   %head
     %meta{'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
-    %link{:rel => 'stylesheet', :href => 'koguma.css', :type => 'text/css'}
+    %link{:rel => 'stylesheet', :href => 'iconlove.css', :type => 'text/css'}
     %script{:src => 'js/lib/jquery-1.3.2.min.js', :type => 'text/javascript'}
-    %script{:src => 'js/koguma.js', :type => 'text/javascript'}
+    %script{:src => 'js/iconlove.js', :type => 'text/javascript'}
     %title I &hearts; Icons
   %body
     #container
@@ -21,7 +21,7 @@
       #content
         = yield
       #footer
-        %a{:href => "http://github.com/thomd/koguma/commits/master"} koguma
+        %a{:href => "http://github.com/thomd/icon-love"} icon-love
         is a 
         %a{:href => "http://www.sinatrarb.com/"} sinatra
         application
