--- a/views/iconlove.sass
+++ b/views/iconlove.sass
@@ -7,7 +7,7 @@ body
   :color #000
 
 a
-  :color #FF2B06
+  :color #E2007A
   :text-decoration none
   &:hover
     :text-decoration underline
@@ -17,21 +17,32 @@ ul
 
 
 
-#container
-  :margin 2em auto
-  :width 960px
-  :overflow hidden
-  
 #header,
 #content,
 #footer
-  :float left
-  :width inherit
+  :margin 0 auto
+  :width 90%
+  :overflow hidden
 
-#header
-  :border-bottom 1px dotted #FF2B06
+#sidebar
+  :width 580px
+
+#logo-wrapper
+  .shadow
+    :background transparent url(../img/shadow.png) no-repeat
+    :float left
+    :height 25em
+    :width 2em
+  .left
+    :background-position -41px -352px
+    :padding 0 0 5em 35em
+  .right
+    :background-position -864px -351px
+    :padding 0 5em 5em 0
   #logo
     :float left
+    :margin 0 -2em 0 -32em
+    :width 34em
     h1
       :display block
       a
@@ -41,35 +52,46 @@ ul
         :text-transform uppercase
         :display block
         :line-height 1em
-        :padding 0 0.2em
+        :padding 2em 0.2em 0.2em
+        :background #E2007A
+        :color #FFF
+        :text-align center
+        :height 2em
         &:hover
-          :background #FF2B06
-          :color #FFF
           :text-decoration none
-  #nav
-    :float right
-    ul
-      li
-        :float left
-        a
-          :display block
-          :font-size 1.5em
-          :font-weight normal
-          :padding 1.5em
-          :color #222
-          &:hover
-            :background #E9E9E9
-            :color #E12000
-            :text-decoration none
+      span
+        :font-size 0.7em
+        :font-weight normal
+        :text-transform none
+        :display block
+        :letter-spacing 0px
+        :text-align right
+
+#navigation
+  :float right
+  :margin-right 5em
+  ul
+    li
+      :float left
+      a
+        :display block
+        :font-size 1.5em
+        :font-weight normal
+        :padding 1.5em
+        :color #333
+        &:hover
+          :background #E9E9E9
+          :color #E2007A
+          :text-decoration none
             
 #content
-  :margin 3em 0
-  :background #E9E9E9
-  :border 1px solid #DDD
-  :-moz-border-radius 1em
-  :-webkit-border-radius 1em
   ul
+    :background #E9E9E9
+    :border 1px solid #DDD
+    :-moz-border-radius 1em
+    :-webkit-border-radius 1em
     :padding 1em
+    :margin 0 5em
     :float left
     li
       :float left
@@ -89,3 +111,7 @@ ul
         &:hover
           :color #111
         
+#footer
+  :margin 2em auto
+  p
+    :margin 0 5em
