--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,22 +5,27 @@
     %link{:rel => 'stylesheet', :href => 'iconlove.css', :type => 'text/css'}
     %script{:src => 'js/lib/jquery-1.3.2.min.js', :type => 'text/javascript'}
     %script{:src => 'js/iconlove.js', :type => 'text/javascript'}
-    %title I &hearts; Icons
+    %title I Love Icons
   %body
-    #container
-      #header
+    #header
+      #logo-wrapper
+        .shadow.left
         #logo
           %h1
-            %a{:href => "/"} Icon Love
-        #nav
-          %ul
-            %li
-              %a{:href => "/new"} New Icon
-            %li
-              %a{:href => "/bookmarklet"} Bookmarklet
-      #content
-        = yield
-      #footer
+            %a{:href => "/"}
+              Icon Love
+              %span &#x007C;&#x02C8;&#x028C;&#x026A;&#x006B;&#x0252;&#x006E; &#x006C;&#x028C;&#x0076;&#x007C;
+        .shadow.right
+      #navigation
+        %ul
+          %li
+            %a{:href => "/new"} New Icon
+          %li
+            %a{:href => "/bookmarklet"} Bookmarklet
+    #content
+      = yield
+    #footer
+      %p
         %a{:href => "http://github.com/thomd/icon-love"} icon-love
         is a 
         %a{:href => "http://www.sinatrarb.com/"} sinatra
