some minor cs changes to make logo more browser compatible

--- a/views/iconlove.sass
+++ b/views/iconlove.sass
@@ -32,17 +32,18 @@ ul
     :background transparent url(../img/shadow.png) no-repeat
     :float left
     :height 25em
-    :width 2em
   .left
-    :background-position -41px -352px
-    :padding 0 0 5em 35em
+    :background-position -41px -351px
+    :padding 0 0 5em 37em
   .right
     :background-position -864px -351px
-    :padding 0 5em 5em 0
+    :padding 0 7em 5em 0
   #logo
     :float left
     :margin 0 -2em 0 -32em
     :width 34em
+    :height 328px
+    :background #E2007A
     h1
       :display block
       a
@@ -53,10 +54,8 @@ ul
         :display block
         :line-height 1em
         :padding 2em 0.2em 0.2em
-        :background #E2007A
         :color #FFF
         :text-align center
-        :height 2em
         &:hover
           :text-decoration none
       span
