--- a/views/layout.haml
+++ b/views/layout.haml
@@ -18,8 +18,8 @@
         .shadow.right
       #navigation
         %ul
-          %li
-            %a{:href => "/new"} New Icon
+          %li{:id => "add-icon"}
+            %a{:href => "/add"} Add Icon
           %li
             %a{:href => "/bookmarklet"} Bookmarklet
     #content
