--- a/views/iconlove.sass
+++ b/views/iconlove.sass
@@ -4,7 +4,8 @@
 
 body
   :font normal normal 13px/1.7em Helvetica Neue, Helvetica, Arial, sans-serif
-  :color #000
+  :color #111
+  :background #EEE
 
 a
   :color #E2007A
@@ -17,114 +18,109 @@ ul
 
 
 
+#header-shadow,
+#content-shadow,
+#footer-shadow
+  :background #EEE url(../img/shadow.png) repeat-y center top
+  :margin 0 auto
+  :width 1102px
+  :overflow hidden
+
 #header,
 #content,
 #footer
-  :margin 0 auto
-  :width 90%
-  :overflow hidden
+  :width 953px
+  :margin-left 69px
+  :border 1px solid #90827A
+  :border-top none
+  :border-bottom none
+  :float left
 
-#sidebar
-  :width 580px
-
-#logo-wrapper
-  .shadow
-    :background transparent url(../img/shadow.png) no-repeat
-    :float left
-    :height 25em
-  .left
-    :background-position -41px -351px
-    :padding 0 0 5em 37em
-  .right
-    :background-position -864px -351px
-    :padding 0 7em 5em 0
+#header
+  :height 140px
+  #logo,
+  #phonetic-spelling,
+  #counter
+    :float right
+    :border-left 1px solid #111
+    :margin-top 10px
+    :padding 5px
+    :height 58px
   #logo
-    :float left
-    :margin 0 -2em 0 -32em
-    :width 34em
-    :height 328px
-    :background #E2007A
-    h1
+    :border-left none
+    a
+      :font-size 40px
+      :font-weight bold
+      :line-height 0.9
+      :text-transform uppercase
+      :letter-spacing -1px
+      &:hover
+        :text-decoration none
+  #counter
+    :font-size 56px
+    :line-height 0.8
+    :margin-right 20px
+    :font-weight bold
+    span
       :display block
-      a
-        :font-size 3em
-        :font-weight bold
-        :letter-spacing -3px
-        :text-transform uppercase
-        :display block
-        :line-height 1em
-        :padding 2em 0.2em 0.2em
-        :color #FFF
-        :text-align center
-        &:hover
-          :text-decoration none
-      span
-        :font-size 0.7em
-        :font-weight normal
-        :text-transform none
-        :display block
-        :letter-spacing 0px
-        :text-align right
+      :font-size 10px
+      :margin-top 4px
+      :font-weight normal
+      :letter-spacing 6px
+      :text-transform uppercase
+  #phonetic-spelling
+    :color #666
+    :font-size 20px
+    :letter-spacing 1px
 
-#navigation
-  :float right
-  :margin-right 5em
-  ul
-    li
-      :float left
-      a
-        :text-align right
-        :display block
-        :font-size 1.5em
-        :font-weight normal
-        :padding 1.5em
-        :color #333
-        :outline none
-        &:hover
-          :background #E9E9E9
-          :color #E2007A
-          :text-decoration none
-      a.selected
-        :color #E2007A
-        :text-decoration underline
-        &:hover
-          :background #FFF
-            
 #content
-  ul
-    :background #E9E9E9
-    :border 1px solid #DDD
-    :-moz-border-radius 1em
-    :-webkit-border-radius 1em
-    :padding 1em
-    :margin 0 5em
+  #icons
+    :background #FFF
+    :width 573px
+    :margin 0 0 0 190px
     :float left
-    li
-      :float left
-      :display block
+    ul
       :padding 1em
-      img
-        :display block
+      :margin 0 5em
+      :float left
+      li
         :float left
-        :background #FFF
-        :border 1px solid #DDD
-      a
         :display block
-        :font-size 1.2em
-        :line-height 1.2em
-        :margin 0 4em 0 2em
-        :color #999
-        &:hover
-          :color #111
+        :padding 1em
+        img
+          :display block
+          :float left
+          :background #FFF
+          :border 1px solid #DDD
+        a
+          :display block
+          :font-size 1.2em
+          :line-height 1.2em
+          :margin 0 4em 0 2em
+          :color #999
+          &:hover
+            :color #111
+  #navigation
+    :float right
+    :margin-right 20px
+    :width 150px
+    li
+      :border-bottom 1px dotted #666
+      a
+        :margin-left 6px
         
-#footer
-  :margin 2em auto
+#footer-shadow
+  :background #EEE url(../img/shadow-bottom.png) no-repeat center bottom
+  :height 105px
+  :margin 0 auto
+  :width 1102px
+  #footer
+    :border-bottom 1px solid #90827A
+    :height 32px
   p
-    :margin 0 5em
+    :margin 70px 0 0 75px
+    :color #666
     
-#add-icon
-  :text-align center
-  
 #add-form
   fieldset
     :border none
