--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,11 +13,11 @@
           37
           %span
             Icons
-        #phonetic-spelling.head
-          [&#x02C8;&#x028C;&#x026A;&#x006B;&#x0252;&#x006E; &#x006C;&#x028C;&#x0076;]
         #logo.head
           %a{:href => "/"}
             Icon Love
+          %span
+            [&#x02C8;&#x028C;&#x026A;&#x006B;&#x0252;&#x006E; &#x006C;&#x028C;&#x0076;]
     #content-shadow
       #content
         #icons
