--- a/views/iconlove.sass
+++ b/views/iconlove.sass
@@ -35,7 +35,6 @@ ul
   :border-top none
   :border-bottom none
   :float left
-  :background url(../img/clouds.jpg)
 
 #header
   :height 140px
@@ -67,6 +66,7 @@ ul
     :line-height 0.8
     :margin-right 20px
     :font-weight bold
+    :text-align center
     span
       :display block
       :font-size 10px
